# hello-world-3000

./: .cmake-format  .gitignore  CMakeLists.txt  Makefile  README.md  about.html  conanfile.py  dir_45ceaae7855647d8e15cc2abf65b95d9.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  index.html  newproj.sh  searchdata-v2.js
.github/workflows/: ci.yml  coverage.yml  documentation.yaml  executable.yml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
cmake/: tools.cmake
cmake/all/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile
greeter/: CMakeLists.txt
include/greeter/: greeter.h
src/greeter/: main.cpp
src/libgreeter/: greeter.cpp
test/: CMakeLists.txt  greeter.cpp
